syntax = "proto3";

package chef.automate.domain.infra_proxy.request;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/request";

message DataBags {
    // ID of the chef organization.
    string org_id = 1;
    // ID of the chef infra server.
    string server_id = 2;
    // Name of the data bag.
    string name = 3;
}

message DataBag {
    // ID of the chef organization.
    string org_id = 1;
    // ID of the chef infra server.
    string server_id = 2;
    // Name of the data bag.
    string name = 3;
    // Name of the data bag item.
    string item = 4;
}
