syntax = "proto3";

package chef.automate.domain.infra_proxy.response;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/response";

message DataBags {
    // List of data bags item.
    repeated DataBagListItem data_bags = 2;
}

message DataBagListItem {
    // Name of the data bag item.
    string name = 1;
}

message DataBag {
    // Data bag name.
    string name = 1;
    // Data bag item ID.
    string id = 2;
    // Stringified json of data bag item.
    string data = 3;
}

message CreateDataBag {
    // Data bag name.
    string name = 1;
}

message CreateDataBagItem {
    // Data bag name.
    string name = 1;
    // Data bag item ID.
    string id = 2;
}

message UpdateDataBagItem {
    // Data bag name.
    string name = 1;
    // Data bag item ID.
    string item_id = 2;
}
